--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -5,142 +5,70 @@
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_1.jpg"
+                    src="/img/project-img-1.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_2.jpg"
+                    src="/img/project-img-2.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_3.jpg"
+                    src="/img/project-img-3.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_4.jpg"
+                    src="/img/project-img-4.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_5.jpg"
+                    src="/img/project-img-5.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_1.jpg"
+                    src="/img/project-img-1.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_2.jpg"
+                    src="/img/project-img-2.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_3.jpg"
+                    src="/img/project-img-3.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_4.jpg"
+                    src="/img/project-img-4.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_5.jpg"
-                    alt="project image"
-                />
-            </li>
-        </ul>
-        <ul class="projects-list">
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_6.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_7.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_8.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_9.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_10.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_6.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_7.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_8.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_9.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_10.jpg"
+                    src="/img/project-img-5.jpg"
                     alt="project image"
                 />
             </li>
@@ -149,142 +77,70 @@
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_1.jpg"
+                    src="/img/project-img-6.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_2.jpg"
+                    src="/img/project-img-7.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_3.jpg"
+                    src="/img/project-img-8.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_4.jpg"
+                    src="/img/project-img-9.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_5.jpg"
+                    src="/img/project-img-10.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_1.jpg"
+                    src="/img/project-img-6.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_2.jpg"
+                    src="/img/project-img-7.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_3.jpg"
+                    src="/img/project-img-8.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_4.jpg"
+                    src="/img/project-img-9.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_5.jpg"
-                    alt="project image"
-                />
-            </li>
-        </ul>
-        <ul class="projects-list">
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_9.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_10.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_1.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_2.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_3.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_9.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_10.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_1.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_2.jpg"
-                    alt="project image"
-                />
-            </li>
-            <li>
-                <img
-                    loading="lazy"
-                    src="/img/project_img_3.jpg"
+                    src="/img/project-img-10.jpg"
                     alt="project image"
                 />
             </li>
@@ -293,84 +149,228 @@
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_5.jpg"
+                    src="/img/project-img-1.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_6.jpg"
+                    src="/img/project-img-2.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_7.jpg"
+                    src="/img/project-img-3.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_8.jpg"
+                    src="/img/project-img-4.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_9.jpg"
+                    src="/img/project-img-5.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_10.jpg"
+                    src="/img/project-img-1.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_5.jpg"
+                    src="/img/project-img-2.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_6.jpg"
+                    src="/img/project-img-3.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_7.jpg"
+                    src="/img/project-img-4.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_8.jpg"
+                    src="/img/project-img-5.jpg"
+                    alt="project image"
+                />
+            </li>
+        </ul>
+        <ul class="projects-list">
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-9.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_9.jpg"
+                    src="/img/project-img-10.jpg"
                     alt="project image"
                 />
             </li>
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_10.jpg"
+                    src="/img/project-img-1.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-2.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-3.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-9.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-10.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-1.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-2.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-3.jpg"
+                    alt="project image"
+                />
+            </li>
+        </ul>
+        <ul class="projects-list">
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-5.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-6.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-7.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-8.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-9.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-10.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-5.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-6.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-7.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-8.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-9.jpg"
+                    alt="project image"
+                />
+            </li>
+            <li>
+                <img
+                    loading="lazy"
+                    src="/img/project-img-10.jpg"
                     alt="project image"
                 />
             </li>
