--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -43,10 +43,10 @@
             </div>
         </div>
         <div >
-            <ul class="accordion accordion-container">
-                <li class="ac accordion-item open">
-                    <div class="ac-header accordion-header">
-                        <button class="ac-trigger accordion-toggle" aria-expanded="true">
+            <ul class="accordion-list">
+                <li class=" accordion-item open">
+                    <div class=" accordion-header">
+                        <button class=" accordion-toggle" aria-expanded="true">
                             <span class="accordion-title">About Me</span>
                             <div class="about-svg-icon">
                                 <svg
@@ -70,8 +70,8 @@
                             </div>
                         </button>
                     </div>
-                    <div class="ac-panel accordion-content">
-                        <div class="ac-text">
+                    <div class=" accordion-content">
+                        <div >
                             <p>
                                 I am Lloyd Jefferson, a talented programmer with
                                 extensive expertise in software development. I have
@@ -101,9 +101,9 @@
                         
                     </div>
                 </li>
-                <li class="ac accordion-item open">
-                    <div class="ac-header accordion-header">
-                        <button class="ac-trigger accordion-toggle" aria-expanded="true">
+                <li class=" accordion-item open">
+                    <div class=" accordion-header">
+                        <button class=" accordion-toggle" aria-expanded="true">
                             <span class="accordion-title"> Role </span>
                             <div class="about-svg-icon">
                                 <svg
@@ -127,17 +127,17 @@
                             </div>
                         </button>
                     </div>
-                    <div class="ac-panel accordion-content">
-                        <ul class="ac-text accordion-role-list">
+                    <div class=" accordion-content">
+                        <ul class=" accordion-role-list">
                             <li>Frontend development</li>
                             <li>HeadlessCMS, Wordpress</li>
                             <li>Blender (enjoy)</li>
                         </ul>
                     </div>
                 </li>
-                <li class="ac accordion-item open">
-                    <div class="ac-header accordion-header">
-                        <button class="ac-trigger accordion-toggle" aria-expanded="true">
+                <li class=" accordion-item open">
+                    <div class=" accordion-header">
+                        <button class=" accordion-toggle" aria-expanded="true">
                             <span class="accordion-title">Education</span>
                             <div class="about-svg-icon">
                                 <svg
@@ -161,8 +161,8 @@
                             </div>
                         </button>
                     </div>
-                    <div class="ac-panel accordion-content">
-                        <ul class="ac-text accordion-role-list">
+                    <div class=" accordion-content">
+                        <ul class=" accordion-role-list">
                             <li>
                                 2018 - 2019 / Frontend Development Diploma, GoIT
                                 IT School, New York
@@ -180,28 +180,24 @@
                 </li>
             </ul>
         </div>
-        <div class="skills">
-            <ul class="skills-list">
-                <li class="skills-list-items chosen">HTML/CSS</li>
-                <li class="skills-list-items">JavaScript</li>
-                <li class="skills-list-items">React</li>
-                <li class="skills-list-items">Node. js</li>
-                <li class="skills-list-items">React Native</li>
-                <li class="skills-list-items">Soft skills</li>
-            </ul>
-            <button class="skills-btm">
-                <div class="about-svg-side-icon">
-                    <svg
-                        class="about-side-icon icon-right"
-                        width="40"
-                        height="40"
-                    >
-                        <use
-                            href="./img/sprite.svg#icon-arrow-narrow-right"
-                        ></use>
-                    </svg>
-                </div>
-            </button>
+        <div class="custom-swiper">
+            <div class="swiper-skills">
+                <ul class="swiper-wrapper-skills-list">
+                    <li class="swiper-skills-list-items chosen">HTML/CSS</li>
+                    <li class="swiper-skills-list-items">JavaScript</li>
+                    <li class="swiper-skills-list-items">React</li>
+                    <li class="swiper-skills-list-items">Node.js</li>
+                    <li class="swiper-skills-list-items">React Native</li>
+                    <li class="swiper-skills-list-items">Soft skills</li>
+                </ul>
+                <button class="skills-swiper-btn-next">
+                    <div class="about-svg-side-icon">
+                        <svg class="about-side-icon icon-right" width="40" height="40">
+                            <use href="./img/sprite.svg#icon-arrow-narrow-right"></use>
+                        </svg>
+                    </div>
+                </button>
+            </div>
         </div>
     </div>
 </section>
