about me swiper

--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -42,11 +42,11 @@
                 </picture>
             </div>
         </div>
-        <div >
+        <div>
             <ul class="accordion-list">
-                <li class=" accordion-item open">
-                    <div class=" accordion-header">
-                        <button class=" accordion-toggle" aria-expanded="true">
+                <li class="accordion-item open">
+                    <div class="accordion-header">
+                        <button class="accordion-toggle" aria-expanded="true">
                             <span class="accordion-title">About Me</span>
                             <div class="about-svg-icon">
                                 <svg
@@ -70,40 +70,41 @@
                             </div>
                         </button>
                     </div>
-                    <div class=" accordion-content">
-                        <div >
+                    <div class="accordion-content">
+                        <div>
                             <p>
                                 I am Lloyd Jefferson, a talented programmer with
-                                extensive expertise in software development. I have
-                                an understanding of different programming languages
-                                and technologies, always ready to improve my skills.
-                                I always follow the latest trends and look for
-                                unconventional, creative solutions to problems. I
-                                have a high level of analytical skills and am able
-                                to effectively solve even the most difficult tasks
-                                encountered on the way.
+                                extensive expertise in software development. I
+                                have an understanding of different programming
+                                languages and technologies, always ready to
+                                improve my skills. I always follow the latest
+                                trends and look for unconventional, creative
+                                solutions to problems. I have a high level of
+                                analytical skills and am able to effectively
+                                solve even the most difficult tasks encountered
+                                on the way.
                             </p>
-                            <p class=" accordion-about-text">
-                                Able to work both independently and in a team. I can
-                                effectively cooperate with colleagues, exchanging
-                                ideas and finding optimal solutions. Professional
-                                maturity allows you to calmly cope with challenges
-                                and stressful situations, while maintaining a high
-                                quality of work. I am always looking for
-                                opportunities for self-improvement. I actively study
-                                new technologies and practices to stay abreast of
-                                the latest innovations. I have a strong
-                                understanding of various programming languages,
-                                frameworks and architectural concepts that allow me
-                                to create efficient and scalable software.
+                            <p class="accordion-about-text">
+                                Able to work both independently and in a team. I
+                                can effectively cooperate with colleagues,
+                                exchanging ideas and finding optimal solutions.
+                                Professional maturity allows you to calmly cope
+                                with challenges and stressful situations, while
+                                maintaining a high quality of work. I am always
+                                looking for opportunities for self-improvement.
+                                I actively study new technologies and practices
+                                to stay abreast of the latest innovations. I
+                                have a strong understanding of various
+                                programming languages, frameworks and
+                                architectural concepts that allow me to create
+                                efficient and scalable software.
                             </p>
                         </div>
-                        
                     </div>
                 </li>
-                <li class=" accordion-item open">
-                    <div class=" accordion-header">
-                        <button class=" accordion-toggle" aria-expanded="true">
+                <li class="accordion-item open">
+                    <div class="accordion-header">
+                        <button class="accordion-toggle" aria-expanded="true">
                             <span class="accordion-title"> Role </span>
                             <div class="about-svg-icon">
                                 <svg
@@ -127,17 +128,17 @@
                             </div>
                         </button>
                     </div>
-                    <div class=" accordion-content">
-                        <ul class=" accordion-role-list">
+                    <div class="accordion-content">
+                        <ul class="accordion-role-list">
                             <li>Frontend development</li>
                             <li>HeadlessCMS, Wordpress</li>
                             <li>Blender (enjoy)</li>
                         </ul>
                     </div>
                 </li>
-                <li class=" accordion-item open">
-                    <div class=" accordion-header">
-                        <button class=" accordion-toggle" aria-expanded="true">
+                <li class="accordion-item open">
+                    <div class="accordion-header">
+                        <button class="accordion-toggle" aria-expanded="true">
                             <span class="accordion-title">Education</span>
                             <div class="about-svg-icon">
                                 <svg
@@ -161,8 +162,8 @@
                             </div>
                         </button>
                     </div>
-                    <div class=" accordion-content">
-                        <ul class=" accordion-role-list">
+                    <div class="accordion-content">
+                        <ul class="accordion-role-list">
                             <li>
                                 2018 - 2019 / Frontend Development Diploma, GoIT
                                 IT School, New York
@@ -180,24 +181,52 @@
                 </li>
             </ul>
         </div>
-        <div class="custom-swiper">
-            <div class="swiper-skills">
-                <ul class="swiper-wrapper-skills-list">
-                    <li class="swiper-skills-list-items chosen">HTML/CSS</li>
-                    <li class="swiper-skills-list-items">JavaScript</li>
-                    <li class="swiper-skills-list-items">React</li>
-                    <li class="swiper-skills-list-items">Node.js</li>
-                    <li class="swiper-skills-list-items">React Native</li>
-                    <li class="swiper-skills-list-items">Soft skills</li>
+        <div class="swiper-container-aboutme">
+            <div class="skills-swiper-about-me">
+                <ul class="skills-list">
+                    <li class="skills-list-items">
+                        <div class="swiper-name-list-aboutme">HTML/CSS</div>
+                    </li>
+                    <li class="skills-list-items">
+                        <div class="swiper-name-list-aboutme">JavaScript</div>
+                    </li>
+                    <li class="skills-list-items">
+                        <div class="swiper-name-list-aboutme">React</div>
+                    </li>
+                    <li class="skills-list-items">
+                        <div class="swiper-name-list-aboutme">Node. js</div>
+                    </li>
+                    <li class="skills-list-items">
+                        <div class="swiper-name-list-aboutme">React Native</div>
+                    </li>
+                    <li class="skills-list-items">
+                        <div class="swiper-name-list-aboutme">Soft skills</div>
+                    </li>
+                    <li class="skills-list-items">
+                        <div class="swiper-name-list-aboutme">HTML/CSS</div>
+                    </li>
+                    <li class="skills-list-items">
+                        <div class="swiper-name-list-aboutme">JavaScript</div>
+                    </li>
+                    <li class="skills-list-items">
+                        <div class="swiper-name-list-aboutme">React</div>
+                    </li>
+                    <li class="skills-list-items">
+                        <div class="swiper-name-list-aboutme">Node. js</div>
+                    </li>
+                    <li class="skills-list-items">
+                        <div class="swiper-name-list-aboutme">React Native</div>
+                    </li>
+                    <li class="skills-list-items">
+                        <div class="swiper-name-list-aboutme">Soft skills</div>
+                    </li>
                 </ul>
-                <button class="skills-swiper-btn-next">
-                    <div class="about-svg-side-icon">
-                        <svg class="about-side-icon icon-right" width="40" height="40">
-                            <use href="./img/sprite.svg#icon-arrow-narrow-right"></use>
-                        </svg>
-                    </div>
-                </button>
             </div>
+            <button class="skills-btm">
+                <svg class="about-side-icon">
+                    <use href="./img/sprite.svg#icon-arrow-narrow-right"></use>
+                </svg>
+            </button>
         </div>
     </div>
 </section>
