--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -1,6 +1,5 @@
 .about-me {
     padding: 0;
-    margin-bottom: 60px;
     margin-top: 60px;
 }
 
@@ -178,86 +177,77 @@
 
 /* Swiper */
 
-.swiper-skills{
-    background: none;
-    border: none;
-    padding: 0;
-    font: inherit;
-    color: inherit;
+.swiper-container-aboutme {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    margin: 0;
+    margin-top: 64px;
+}
+
+.skills-swiper-about-me {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    overflow: hidden;
+    width: 260px;
+}
+
+.skills-list {
+    display: flex;
+    min-width: 0;
+    width: 260px;
+    user-select: none;
+}
+
+.skills-list-items {
+    flex-shrink: 0;
     width: 100%;
-    max-width: 343px;
-    height: 130px;
-    margin-top: 32px;
-    /*overflow: hidden;
-    position: relative;*/
+    height: 100%;
+    border-radius: 100px;
+    display: block;
 }
 
-.swiper-wrapper-skills-list {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: row;
-    gap: 0px;
-    width: 343px;
+.swiper-name-list-aboutme {
     height: 130px;
-    /* overflow: hidden; */
-}
-
-.swiper-skills-list-items {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    border-radius: 100px;
     border: 1px solid rgba(250, 250, 250, 0.2);
-    border-radius: 50%;
-    width: 130px;
-    height: 130px;
-    background-color: transparent;
-    transition: background-color 0.3s ease;
-    transition: transform 0.3s ease, opacity 0.3s ease;
+    justify-content: center;
+    align-items: center;
 }
 
-.swiper-skills-list-items.chosen {
+.chosen {
     background-color: #ed3b44;
+    border-color: #ed3b44;
 }
 
-.skills-swiper-btn-next{
-        background: none;
-            border: none;
-            padding: 0;
-            font: inherit;
-            color: inherit;
-            cursor: pointer;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 100%;
-}
-
-.about-svg-side-icon {
+.skills-btm {
+    background-color: transparent;
+    border: none;
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 40px;
-    height: 40px;
-    fill: transparent;
-    stroke: #3b3b3b;
-    margin-left: 64px;
-    background-color: transparent;
 }
 
 .about-side-icon {
+    width: 28px;
+    height: 28px;
+    fill: none;
+    stroke: #3b3b3b;
+    transition: stroke 250ms ease;
 }
 
-.icon-right {
+.skills-btm:hover .about-side-icon {
+    stroke: #5c5c5c;
 }
 
 @media screen and (min-width: 768px) {
     .about-me {
         margin-top: 64px;
-        margin-bottom: 64px;
     }
 
     .about-me > .container {
@@ -311,20 +301,14 @@
         margin-top: 16px;
     }
 
-    .swiper-skills{
-        max-width: 704px;
-        height: 200px;
+    .skills-swiper-about-me {
+        width: 600px;
     }
 
-    .swiper-wrapper-skills-list {
-    width: 704px;
-    height: 200px;
-}
-
-    .swiper-skills-list-items {
-        font-size: 20px;
-        width: 200px;
+    .swiper-name-list-aboutme {
         height: 200px;
+        width: 200px;
+        font-size: 20px;
     }
 
     .about-side-icon {
@@ -337,7 +321,6 @@
 @media screen and (min-width: 1440px) {
     .about-me {
         margin-top: 100px;
-        margin-bottom: 100px;
     }
 
     .about-me-discr {
@@ -384,27 +367,11 @@
         margin-top: 32px;
     }
 
-    .swiper-skills {
-        max-width: 1312px;
-        margin-top: 96px;
-        margin-left: 32px;
-        margin-right: 32px;
+    .swiper-container-aboutme {
+        margin: 96px 32px 0 32px;
     }
 
-    .swiper-wrapper-skills-list {
-        flex-direction: row;
-        margin-top: 0px;
-        margin-bottom: 0px;
-        width: 1312px;
-    }
-
-    .about-svg-side-icon {
-        margin-left: 72px;
-    }
-
-    .about-side-icon {
-    }
-
-    .icon-right {
+    .skills-swiper-about-me {
+        width: 1200px;
     }
 }
