--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -3,7 +3,7 @@
         <h2 class="faq-title">FAQ</h2>
         <ul class="accordion-container">
             <li class="ac">
-                <h4 class="ac-header ac-trigger faq-ac-trigger">
+                <h4 class="ac-header ac-trigger faq-ac-trigger h4-classes">
                     What programming languages are most often used in your
                     project?
                     <button type="button" class="faq-btn">
@@ -29,7 +29,7 @@
                 </div>
             </li>
             <li class="ac">
-                <h4 class="ac-header ac-trigger faq-ac-trigger">
+                <h4 class="ac-header ac-trigger faq-ac-trigger h4-classes">
                     What are the deadlines for the project?
                     <button type="button" class="faq-btn">
                         <svg width="20" height="20" class="faq-arrow">
@@ -53,7 +53,7 @@
                 </div>
             </li>
             <li class="ac">
-                <h4 class="ac-header ac-trigger faq-ac-trigger">
+                <h4 class="ac-header ac-trigger faq-ac-trigger h4-classes">
                     What payment methods do you accept?
                     <button type="button" class="faq-btn">
                         <svg width="20" height="20" class="faq-arrow">
@@ -76,7 +76,7 @@
                 </div>
             </li>
             <li class="ac">
-                <h4 class="ac-header ac-trigger faq-ac-trigger">
+                <h4 class="ac-header ac-trigger faq-ac-trigger h4-classes">
                     How can I contact you?
                     <button type="button" class="faq-btn">
                         <svg width="20" height="20" class="faq-arrow">
@@ -99,7 +99,7 @@
                 </div>
             </li>
             <li class="ac">
-                <h4 class="ac-header ac-trigger faq-ac-trigger">
+                <h4 class="ac-header ac-trigger faq-ac-trigger h4-classes">
                     Do you provide advice or support?
                     <button type="button" class="faq-btn">
                         <svg width="20" height="20" class="faq-arrow">
@@ -123,7 +123,7 @@
                 </div>
             </li>
             <li class="ac">
-                <h4 class="ac-header ac-trigger faq-ac-trigger">
+                <h4 class="ac-header ac-trigger faq-ac-trigger h4-classes">
                         What does the process of developing a software product look like from idea to implementation?
                     <button type="button" class="faq-btn">
                         <svg width="20" height="20" class="faq-arrow">
