--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -16,7 +16,7 @@ li.ac {
     padding-bottom: 32px;
 }
 
-.ac-header .ac-trigger .faq-ac-trigger {
+.h4-classes {
     font-weight: 600;
     font-size: 20px;
     line-height: 1.5;
@@ -26,7 +26,7 @@ li.ac {
     padding-bottom: 16px;
 }
 
-li.ac .ac-trigger {
+li.ac .h4-classes {
     font-family: 'Inter Tight', sans-serif;
     font-weight: 600;
     font-size: 20px;
@@ -40,11 +40,11 @@ li.ac .ac-panel .ac-text {
     color: rgba(250, 250, 250, 0.6);
 }
 
-.ac-trigger {
+.h4-classes {
     padding: 0;
 }
 
-.ac-trigger::after {
+.h4-classes::after {
     display: none;
 }
 
